--- a/templates/user/playlists.html
+++ b/templates/user/playlists.html
@@ -3,19 +3,14 @@
 {% block content %}
 <h1>{{user.username}}'s Playlists</h1>
 {% for playlist in user.playlists %}
-<div>
-    <h4>{{playlist.name}}</h4>
-    <p>Description: {{playlist.description}}</p>
+<div class="playlist">
+    <h4 class='playlist-name'>{{playlist.name}}</h4>
     <ol>
         {% for recording in (playlist.recordings)[:3] %}
         <li>{{recording.title}} <small>- {{recording.artist}}</small></li>
         {% endfor %}
     </ol>
-    <ul>Tags found in playlist:
-        {% for tag in tags %}
-        <li><a href="/tags/{{tag.id}}">{{tag.name}}</a></li>
-        {% endfor %}
-    </ul>
+    <p>Description: {{playlist.description}}</p>
     <a href="/playlists/{{playlist.id}}">See full playlist</a>
 </div>
 {% endfor %}
