--- a/templates/404.html
+++ b/templates/404.html
@@ -2,4 +2,6 @@
 {% block title %}Page not found{% endblock %}
 {% block content %}
 <h1>Sorry but the page was not found</h1>
+
+<small><a href="/">Go back home...</a></small>
 {% endblock %}
